--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
     <title>ReStore</title>
   </head>
   <body>
